Fixed badge spacing on higher resolutions causing new lines

--- a/style.sass
+++ b/style.sass
@@ -44,7 +44,7 @@ a
 		padding: 0
 	li
 		float: left
-		margin: 2vh 4vw
+		margin: 2vh 2vw
 	img
 		height: 120px
 
